--- a/alert.css
+++ b/alert.css
@@ -10,6 +10,10 @@
     z-index: 1000;
 }
 
+#custom-alert {
+    display: none;
+}
+
 .alert-box {
     background: var(--color-6);
     padding: 2rem 5rem;
